Add EngineCursorBrushController and DataCursorBrushController

--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -110,6 +110,10 @@
       <Project>{7EE0B116-6B49-4073-99D8-827DD68B8AE0}</Project>
       <Name>Fingear</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Simulacra\Simulacra.Injection\Simulacra.Injection.csproj">
+      <Project>{9c7a9012-5536-43be-8055-2c3ff297c902}</Project>
+      <Name>Simulacra.Injection</Name>
+    </ProjectReference>
     <ProjectReference Include="..\External\Simulacra\Simulacra\Simulacra.csproj">
       <Project>{8ba795fc-e007-40bb-bd70-90d970c99369}</Project>
       <Name>Simulacra</Name>
