--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -55,10 +55,16 @@
     <Compile Include="ISpriteSheet.cs" />
     <Compile Include="ISpriteSheetCarver.cs" />
     <Compile Include="ISpriteSource.cs" />
-    <Compile Include="Renderer\Primitives\LineRenderer.cs" />
+    <Compile Include="Primitives\CircleOutlinePrimitive.cs" />
+    <Compile Include="Primitives\EllipseOutlinePrimitive.cs" />
+    <Compile Include="IPrimitive.cs" />
+    <Compile Include="Primitives\LinePrimitive.cs" />
+    <Compile Include="Renderer\PrimitiveRenderer.cs" />
     <Compile Include="Renderer\MappingRenderer.cs" />
     <Compile Include="Renderer\Base\RendererBase.cs" />
     <Compile Include="Renderer\Base\SpriteRendererBase.cs" />
+    <Compile Include="PrimitiveComponent.cs" />
+    <Compile Include="Primitives\VertexBufferType.cs" />
     <Compile Include="Renderer\TexturingRenderer.cs" />
     <Compile Include="Shapes\FilledCircleSprite.cs" />
     <Compile Include="SpriteAnimation.cs" />
