Add ellipse and circle primitives

--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -51,6 +51,10 @@
     <Compile Include="DepthManager.cs" />
     <Compile Include="Drawer.cs" />
     <Compile Include="FillView.cs" />
+    <Compile Include="Primitives\CirclePrimitive.cs" />
+    <Compile Include="Primitives\EllipsePrimitive.cs" />
+    <Compile Include="Primitives\Base\PrimitiveBase.cs" />
+    <Compile Include="Primitives\Utils\PrimitiveHelpers.cs" />
     <Compile Include="Renderer\FillingRectangle.cs" />
     <Compile Include="ISpriteSheet.cs" />
     <Compile Include="ISpriteSheetCarver.cs" />
@@ -135,6 +139,7 @@
   <ItemGroup>
     <None Include="FodyWeavers.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
