--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Primitives\EllipsePrimitive.cs" />
     <Compile Include="Primitives\Base\PrimitiveBase.cs" />
     <Compile Include="Primitives\IndexedShapePrimitive.cs" />
+    <Compile Include="Primitives\PrimitiveCollection.cs" />
     <Compile Include="Primitives\PrimitiveExtension.cs" />
     <Compile Include="Primitives\Utils\PrimitiveHelpers.cs" />
     <Compile Include="Renderer\FillingRectangle.cs" />
