Reimplement primitve to handle refresh

--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -51,11 +51,10 @@
     <Compile Include="DepthManager.cs" />
     <Compile Include="Drawer.cs" />
     <Compile Include="FillView.cs" />
-    <Compile Include="Primitives\CirclePrimitive.cs" />
     <Compile Include="Primitives\EdgedShapeOutlinePrimitive.cs" />
     <Compile Include="Primitives\EllipsePrimitive.cs" />
     <Compile Include="Primitives\Base\PrimitiveBase.cs" />
-    <Compile Include="Primitives\IndexedShapePrimitive.cs" />
+    <Compile Include="Primitives\TriangulableShapePrimitive.cs" />
     <Compile Include="Primitives\PrimitiveCollection.cs" />
     <Compile Include="Primitives\PrimitiveExtension.cs" />
     <Compile Include="Primitives\Utils\PrimitiveHelpers.cs" />
@@ -63,7 +62,6 @@
     <Compile Include="ISpriteSheet.cs" />
     <Compile Include="ISpriteSheetCarver.cs" />
     <Compile Include="ISpriteSource.cs" />
-    <Compile Include="Primitives\CircleOutlinePrimitive.cs" />
     <Compile Include="Primitives\EllipseOutlinePrimitive.cs" />
     <Compile Include="IPrimitive.cs" />
     <Compile Include="Primitives\LinePrimitive.cs" />
